@@ -1,3 +1,5 @@
+* Add relation_field for many2one
+
 Version 3.0.0 - 2013-10-21
 * Bug fixes (see mercurial logs for details)
 * Allow customization of translation in po files
